Decomposed proxy configuration into proxy config per API

--- a/NginxConfig/nginx.conf
+++ b/NginxConfig/nginx.conf
@@ -76,22 +76,9 @@ http {
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
         }
-	
-	location /Dev/fact {
-        proxy_pass https://vpce-032506d142333d306-3l8zhfso.execute-api.us-east-1.vpce.amazonaws.com;
-        proxy_set_header Host dvji0wlrok.execute-api.us-east-1.amazonaws.com;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    	}
-	location /dogs { 
-        proxy_pass https://vpce-032506d142333d306-3l8zhfso.execute-api.us-east-1.vpce.amazonaws.com/Dev/$request_uri;
-        proxy_set_header Host kh27wwfd4m.execute-api.us-east-1.amazonaws.com;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
+ 	include /etc/nginx/api-configurations/api-cats/api-cats-proxy.conf;	
+         include /etc/nginx/api-configurations/api-dogs/api-dogs-proxy.conf;
+	}
 
 }
 
