--- a/NginxConfig/api-configurations/api-dogs/api-dogs-proxy.conf
+++ b/NginxConfig/api-configurations/api-dogs/api-dogs-proxy.conf
@@ -5,3 +5,10 @@ location /dogs {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         }
+location /Dev/dogs {
+        proxy_pass https://vpce-032506d142333d306-3l8zhfso.execute-api.us-east-1.vpce.amazonaws.com;
+        proxy_set_header Host kh27wwfd4m.execute-api.us-east-1.amazonaws.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        }
